# boxes_game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.cmd  fs.fs  main.cc  vs.vs
engine/core/: core.cc  core.h  game_object.cc  game_object.h  property.h
engine/error/: engine_error.h  engine_val.h
engine/file/: file.cc  file.h
engine/input/kbd/: kbd.cc  kbd.h
engine/render/opengl/: gl_call.h
engine/render/opengl/buffer/: element_buffer.cc  element_buffer.h  vertex_array_object.cc  vertex_array_object.h  vertex_buffer.cc  vertext_buffer.h
engine/render/opengl/camera/: camera.cc  camera.h
engine/render/opengl/shader/: shader_program.cc  shader_program.h  uniform.cc  uniform.h
engine/render/opengl/texture/: texture.cc  texture.h
engine/sound/: sound.cc  sound.h
engine/vector/: vector2.h
game/: bomb.h  bomb_spawner.h  coin.h  coin_spwaner.h  player.h
util/: util.h
